--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Navbar -->
   <nav>
     <div class="logo">
-      <img src="assets/logo.png" alt="TamilDark Logo">
+      <img src="assets/logo.jpg" alt="TamilDark Logo">
     </div>
     <button class="menu-button" aria-label="Toggle Menu">&#9776;</button>
     <ul class="nav-links">
