--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ animation: spin 1s linear infinite; /* Add a spinning animation */
 }
     </style>
     <div id="loading-animation" class="loading-animation" style="display: none;">
-      <img src="assets/loading.gif" alt="Loading Animation">
+      <img src="assets/477.gif" alt="Loading Animation">
     </div>
   </div>
 
