--- a/contact.html
+++ b/contact.html
@@ -8,84 +8,90 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
-    <style>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        background-image: url('assets/background.jpg'); /* Replace with your wallpaper URL */
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        color: #333;
+    }
+
+    .logo {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        background-image: url('logo.jpg'); /* Replace with your logo image */
+        background-size: cover;
+        background-position: center;
+        margin-bottom: 20px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .contact-info {
+        text-align: center;
+        background: rgba(255, 255, 255, 0.8);
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        max-width: 90%;
+        width: 400px;
+    }
+
+    .email, .telegram {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 15px 0;
+        font-size: 18px;
+    }
+
+    .email i, .telegram i {
+        margin-right: 10px;
+        font-size: 24px;
+    }
+
+    .email a, .telegram a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    .email a:hover, .telegram a:hover {
+        text-decoration: underline;
+    }
+
+    .telegram {
+        color: #0088cc;
+    }
+
+    footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        background: rgba(0, 0, 0, 0.7);
+        color: white;
+        padding: 10px 0;
+        font-size: 14px;
+    }
+
+    /* Ensure the background image scales properly on smaller devices */
+    @media (max-width: 768px) {
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-image: url('assets/background.jpg'); /* Replace with your wallpaper URL */
             background-size: cover;
             background-position: center;
-            background-attachment: fixed;
-            background-repeat: no-repeat;
-            color: #333;
         }
-
-        .logo {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            background-color: #007bff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-
-        .contact-info {
-            text-align: center;
-            background: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .email, .telegram {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 15px 0;
-            font-size: 18px;
-        }
-
-        .email i, .telegram i {
-            margin-right: 10px;
-            font-size: 24px;
-        }
-
-        .email a, .telegram a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .email a:hover, .telegram a:hover {
-            text-decoration: underline;
-        }
-
-        .telegram {
-            color: #0088cc;
-        }
-
-        footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            text-align: center;
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 10px 0;
-            font-size: 14px;
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
  
